# CmakeQtTest

./: CMakeLists.txt  MainWindow.cpp  MainWindow.ui  README.MD  README.md  dependences.cmake
CC5A/componentscore5alpha/: CMakeLists.txt  Changelist.txt  ComponentsCore5alpha.pro  componentmanager.cpp  componentmanager.h  components-core5-alpha.spec  componentscore_global.h  create_release.sh  version.h
CC5A/componentscore5alpha/debian/: changelog  rules
cmake/: FindComponentsCore5alpha.cmake
components/ComponentA/: CMakeLists.txt  ComponentA.json  ComponentA_global.h  aobject.cpp  aobject.h  dependences.cmake
components/ComponentA.back/: ComponentA.cpp  ComponentAInfo.h
components/ComponentA.back/Object/: A.cpp
components/ComponentB.back/: ComponentB.h
components/ComponentB.back/Object/: B.cpp  B.h
components/build-ComponentA-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
components/build-ComponentA-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-f347324cd7b3def16def.json  codemodel-v2-870469e74ab7d1d32408.json  index-2023-01-27T12-44-22-0879.json  target-ComponentA-Debug-d553cdc0da2caededa44.json
components/build-ComponentA-Desktop-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-2945a1bfdc28a2b5a353.json  codemodel-v2-b858d9b266d3d035f2bc.json  index-2023-01-27T12-31-14-0023.json  target-ComponentA-Debug-0afe20daef0b6c9d634b.json  target-ComponentA_autogen-Debug-4da9c3fe055fd4b8f893.json
components/build-ComponentA-Desktop-Debug/.qtc_clangd/: compile_commands.json
components/build-ComponentA-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: ComponentA_global.h.A4A7DF6EC7F9ED87.idx  IAObject.h.819E04D8B06E17A2.idx  IComponent.996DF683D44F996C.idx  QPluginLoader.7050565992B59A5C.idx  QString.81DFD7617BD482F2.idx  QStringList.837F6FAA7D97DF4E.idx  QVector.40E70ECD7615FFD6.idx  QtPlugin.B763775BD7DDB863.idx  __locale_t.h.3F73A78C1398A1A9.idx  __stddef_max_align_t.h.CDC600D71377D09E.idx  algorithm.D79A2F97D4A53BDC.idx  algorithmfwd.h.6A1AB220189EE194.idx  aligned_buffer.h.651E2BECCD74EAD2.idx  alloc_traits.h.75233731E12CF3AE.idx  alloc_traits.h.E0D38005DF717BBF.idx  alloca.h.B3C3404035C15EA6.idx  allocated_ptr.h.BA4DCBCF9F3DDDD0.idx  allocator.h.F8E7F5A8724797DF.idx  aobject.cpp.85130A9C88D39376.idx  aobject.h.5C645FFD05585456.idx  array.AA50409F2671137C.idx  assert.h.F44EF353D67C7E11.idx  assertions.h.F1ECB5A11954E499.idx  atomic.4770DA9962B3D55E.idx  atomic_base.h.E2090E02B8604836.idx  atomic_lockfree_defines.h.F99BDE000A8A2432.idx  atomic_word.h.0BCCF061A46F0618.idx  atomicity.h.1321565894E2FF04.idx  auto_ptr.h.513B946B5AA36FF9.idx  basic_ios.h.3A45789B5C5A7485.idx  basic_ios.tcc.F171375999CA3EA3.idx  basic_string.h.6C3040AABA5EFEB1.idx  basic_string.tcc.BAE822EF74D0BC81.idx  binders.h.7ACF980130C333E8.idx  byteswap.h.6F2302C3C3B7048C.idx  c++allocator.h.666EE006C091D09B.idx  c++config.h.C038BC3E46980F17.idx  c++locale.h.5475E15D5F2DC608.idx  cctype.B6A3A5FB6BB65D9A.idx  cdefs.h.8113CACA75BA375E.idx  (+260 more)
components/build-ComponentA-Desktop-Debug/ComponentA_autogen/: moc_predefs.h  mocs_compilation.cpp
components/build-ComponentA-Desktop-Debug/ComponentA_autogen/EWIEGA46WW/: moc_aobject.cpp  moc_aobject.cpp.d  moc_componenta.cpp  moc_componenta.cpp.d
components/build-ComponentA-Desktop-Debug/ComponentA_autogen/UYJLPD7E56/: moc_IAObject.cpp  moc_IAObject.cpp.d
src/: CMakeLists.txt
src/applications/Core/: CMakeLists.txt  MainWindow.h  dependences.cmake
src/components/: CMakeLists.txt
src/components/ComponentA/: CMakeLists.txt  ComponentA.json  ComponentA.xml  aobject.cpp  componenta.cpp  componenta.h  dependences.cmake  dependences.cmake.autosave
src/components/ComponentA.back/: ComponentA.h  ComponentA.pro  ComponentA_global.h
src/components/ComponentA.back/Object/: A.h
src/components/ComponentB/: CMakeLists.txt  ComponentB.json  ComponentB_global.h  bobject.cpp  bobject.h  componentb.cpp  componentb.h  dependences.cmake  dependences.cmake.autosave
src/components/ComponentB.back/: ComponentB.cpp  ComponentB.pro  ComponentBInfo.h  ComponentB_global.h
src/components/ComponentB/objects/: wordhello.cpp  wordhello.h  wordworld.cpp  wordworld.h
src/include/ComponentA/: IAObject.h
src/include/ComponentB/: IBObject.h  IWord.h
